--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="faqs.html">FAQs</a>
+        <a href="ethics.html">Ethics</a>
+        <a href="article.html">Article</a>
+    </nav>
+    <h1>ARTIFICIAL INTELLIGENCE</h1>
+</body>
+</html>
