Update FAQs link to point to faq.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="faqs.html">FAQs</a>
+        <a href="faq.html">FAQs</a>
         <a href="ethics.html">Ethics</a>
         <a href="article.html">Article</a>
     </nav>
